loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:15: error: not found: value False
} while (sortieTrouvee == False) 
                          ^